@@ -12,5 +12,6 @@ my $obj = Acme::CPANAuthors->new('Czech');
 my @ret = $obj->id;
 my @right_ret = ('CHOROBA', 'DANPEDER', 'HIHIK', 'HPA', 'JANPAZ', 'JANPOM',
 	'JENDA', 'JSPICAK', 'KLE', 'MAJLIS', 'MILSO', 'MJFO', 'PAJAS', 'PASKY',
-	'PEK', 'RUS', 'RVASICEK', 'SKIM', 'TKR', 'TRIPIE', 'ZOUL');
+	'PEK', 'POPEL', 'RUS', 'RVASICEK', 'SKIM', 'STRAKA', 'TKR', 'TRIPIE',
+	'ZEMAN', 'ZOUL');
 is_deeply(\@ret, \@right_ret, 'CPAN authors ids.');
