@@ -1,4 +1,5 @@
 0.11
+ - Add POPEL CPAN account.
  - Add STRAKA CPAN account.
  - Add ZEMAN CPAN account.
  - Update Module::Install to 1.10 version.
